add init command for repository creation